--- a/src/app/pages/feature/editfeature/editfeature.page.html
+++ b/src/app/pages/feature/editfeature/editfeature.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar *ngIf="resource && resource._id && moment.resource && moment.resource.field">
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal(this.anyChangeMade)"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="closeModal(this.anyChangeMade)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title slot="start">
       <span *ngIf="moment._id">{{moment.resource['en-US'].value[0]}}</span> <!--Create-->
@@ -265,9 +265,9 @@
 
           <ion-card class="monthview" *ngIf="dateType || allDay">
             <div class="month-title-container">
-              <ion-icon name="arrow-back-outline" class="calendar-arrow left" (click)="calendarService.changeDate($event, 4)"></ion-icon>
+              <ion-icon name="chevron-back-outline" class="calendar-arrow left" (click)="calendarService.changeDate($event, 4)"></ion-icon>
               <h4 class="month-title">{{calendarService.calendar.viewTitle}}</h4>
-              <ion-icon name="arrow-forward-outline" class="calendar-arrow right" (click)="calendarService.changeDate($event, 2)"></ion-icon>
+              <ion-icon name="chevron-forward-outline" class="calendar-arrow right" (click)="calendarService.changeDate($event, 2)"></ion-icon>
             </div>
             <div class="monthview-day-headers">S</div>
             <div class="monthview-day-headers">M</div>
