--- a/src/app/pages/user/about/about.page.html
+++ b/src/app/pages/user/about/about.page.html
@@ -1,7 +1,7 @@
 <ion-header *ngIf="modalPage" id="about-me-header">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal()" id='clickback'><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="closeModal()" id='clickback'><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>About Me</ion-title>
     <ion-buttons slot="end">
