--- a/src/app/pages/board/editboardpost/editboardpost.page.html
+++ b/src/app/pages/board/editboardpost/editboardpost.page.html
@@ -2,7 +2,7 @@
     <ion-toolbar>
         <ion-buttons slot="start">
             <ion-button (click)="closeModal(false)">
-                <ion-icon name="arrow-back-outline"></ion-icon>
+                <ion-icon name="chevron-back-outline"></ion-icon>
             </ion-button>
         </ion-buttons>
         <ion-title *ngIf="!post._id">{{resource['en-US'].matrix_string[0][2]}}</ion-title>
