--- a/src/app/pages/board/groupboard/groupboard.page.html
+++ b/src/app/pages/board/groupboard/groupboard.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal(false)"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="closeModal(false)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-slides #titles class="titles" (ionSlideDidChange)="titleSlideChange($event)">
       <ion-slide>
