--- a/src/app/pages/discover/preferences/preferences.page.html
+++ b/src/app/pages/discover/preferences/preferences.page.html
@@ -1,7 +1,7 @@
 <ion-header *ngIf="modalPage || showHeader" id="preference-header">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal()" id="clickback"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="closeModal()" id="clickback"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title *ngIf="organizer">Onboarding Process</ion-title>
     <ion-title *ngIf="!organizer">About Me</ion-title>
