--- a/src/app/pages/feature/onboardfeature/onboardfeature.page.html
+++ b/src/app/pages/feature/onboardfeature/onboardfeature.page.html
@@ -1,7 +1,7 @@
 <ion-header no-border>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="back()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="back()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-grid>
       <ion-row>
@@ -369,7 +369,7 @@
         <div *ngIf="!nextButtonReady">Saving ...</div>
       </ion-button>
       <ion-button *ngIf="loadCompleted && reachedEnd" expand="full" shape="round" class="centered" (click)="addUserToProgramUserList(programId, type, token)">
-        Let's Get Started <ion-icon name="arrow-forward-outline"></ion-icon>
+        Let's Get Started <ion-icon name="chevron-forward-outline"></ion-icon>
       </ion-button>
     </ion-row>
   </ion-toolbar>
