--- a/src/app/pages/group/groupinfo/groupinfo.page.html
+++ b/src/app/pages/group/groupinfo/groupinfo.page.html
@@ -1,7 +1,7 @@
 <ion-header *ngIf="chatService.currentChatProps[propIndex]">
   <ion-toolbar mode="ios">
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="closeModal()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title *ngIf="chatService.currentChatProps[propIndex].group.name">{{chatService.currentChatProps[propIndex].group.name}}</ion-title>
     <ion-buttons slot="end">
