update icons, improve editfeature.page.ts observables
1.8.0 (4)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
           <ion-item (click)="changeTab('myconversations')">
             <ion-icon slot="start"  name="chatbox"></ion-icon>
             <ion-label>Chat</ion-label>
-            <ion-badge *ngIf="chatService && chatService.connectTabBadge" color="grey" slot="end">{{chatService.connectTabBadge}}</ion-badge>
+            <ion-badge *ngIf="chatService && chatService.connectTabBadge" color="primary" slot="end" mode="md">{{chatService.connectTabBadge}}</ion-badge>
           </ion-item>
           <ion-item (click)="changeTab('me')">
             <ion-icon slot="start" ios="person-sharp" md="person-sharp"></ion-icon>
