--- a/src/app/pages/board/communityboard/communityboard.page.scss
+++ b/src/app/pages/board/communityboard/communityboard.page.scss
@@ -4,15 +4,16 @@ app-communityboard {
     --background: var(--ion-color-secondary);
   }
 
-  ion-button {
+  ion-menu-toggle {
     ion-badge {
-      position: absolute;
+      position: relative;
       top: 0.1rem;
-      right: 0.1rem;
+      right: 22px;
 
-      & ~ ion-icon {
+      /*& ~ ion-icon {
         outline-color: whitesmoke;
-      }
+      }*/
+      z-index: 5;
     }
   }
 
