--- a/src/app/pages/manage/administrators/administrators.page.html
+++ b/src/app/pages/manage/administrators/administrators.page.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+  <div>To add administrator, go to Members, then click on the Member profile to change the admin status.</div>
   <ion-list *ngIf="churchService && churchService.currentManagedCommunity">
     <ion-item *ngFor="let admin of churchService.currentManagedCommunity.admins" (click)="editAdmin($event, admin)">
       <ion-avatar slot="start">
