--- a/src/app/pages/manage/managecommunities/managecommunities.page.scss
+++ b/src/app/pages/manage/managecommunities/managecommunities.page.scss
@@ -1,14 +1,15 @@
 app-managecommunities {
 
-  ion-button {
+  ion-menu-toggle {
     ion-badge {
-      position: absolute;
+      position: relative;
       top: 0.1rem;
-      right: 0.1rem;
+      right: 22px;
 
-      & ~ ion-icon {
+      /*& ~ ion-icon {
         outline-color: whitesmoke;
-      }
+      }*/
+      z-index: 5;
     }
   }
 
