--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -1,14 +1,15 @@
 app-dashboard {
 
-  ion-button {
+  ion-menu-toggle {
     ion-badge {
-      position: absolute;
+      position: relative;
       top: 0.1rem;
-      right: 0.1rem;
+      right: 22px;
 
-      & ~ ion-icon {
+      /*& ~ ion-icon {
         outline-color: whitesmoke;
-      }
+      }*/
+      z-index: 5;
     }
   }
 
@@ -138,15 +139,16 @@ app-dashboard {
     text-decoration: underline;
   }
 
-  ion-button {
+  ion-menu-toggle {
     ion-badge {
-      position: absolute;
+      position: relative;
       top: 0.1rem;
-      right: 0.1rem;
+      right: 22px;
 
-      & ~ ion-icon {
+      /*& ~ ion-icon {
         outline-color: whitesmoke;
-      }
+      }*/
+      z-index: 5;
     }
   }
 
