--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -84,7 +84,6 @@ app-dashboard {
     color: var(--ion-color-secondary);
   }
 
-
   .current-date-display {
     display: inline-block;
     font-size: large;
@@ -139,16 +138,15 @@ app-dashboard {
     text-decoration: underline;
   }
 
-  ion-menu-toggle {
+  ion-button {
     ion-badge {
-      position: relative;
+      position: absolute;
       top: 0.1rem;
-      right: 22px;
+      right: 0.1rem;
 
-      /*& ~ ion-icon {
+      & ~ ion-icon {
         outline-color: whitesmoke;
-      }*/
-      z-index: 5;
+      }
     }
   }
 
@@ -205,19 +203,18 @@ app-dashboard {
     position: relative;
     color: var(--ion-color-grey);
     text-align: center;
-
   }
 
   .monthview-element {
-      width: calc(100% / 7);
-      float: left;
-      position: relative;
-      padding-bottom: calc(100% / 9);
-    }
+    width: calc(100% / 7);
+    float: left;
+    position: relative;
+    padding-bottom: calc(100% / 9);
+  }
 
   .selected-date {
-      background-color: var(--ion-color-lightgrey);
-      border-radius: 50%;
+    background-color: var(--ion-color-lightgrey);
+    border-radius: 50%;
   }
 
   .monthview-element .monthview-element-content {
@@ -241,11 +238,10 @@ app-dashboard {
   .monthview-element-dot {
     height: 5px;
     width: 5px;
-    margin: 0px .5px 0px .5px;
+    margin: 0px 0.5px 0px 0.5px;
     border-radius: 50%;
     background-color: var(--ion-color-primary);
   }
-
 
   .list-container {
     overflow: scroll;
@@ -332,7 +328,6 @@ app-dashboard {
     text-align: center;
   }
 
-
   .no-events-note {
     color: var(--ion-color-grey);
     text-align: center;
@@ -366,14 +361,14 @@ app-dashboard {
 
   .moreOptions {
     width: 100%;
-    background-color: rgba(238,238,238,0.5);
+    background-color: rgba(238, 238, 238, 0.5);
     overflow: scroll;
 
-    .moreGrid{
+    .moreGrid {
       width: 100%;
     }
 
-    .topRow{
+    .topRow {
       width: 100%;
     }
 
@@ -390,8 +385,8 @@ app-dashboard {
         border-radius: 10px;
         border-style: solid;
         border-width: 1px;
-        background-color: #FFFFFF;
-        border-color: #CCCCCC;
+        background-color: #ffffff;
+        border-color: #cccccc;
       }
 
       .moreLabel {
@@ -403,36 +398,36 @@ app-dashboard {
     }
   }
 
-  .pageRow{
+  .pageRow {
     position: absolute;
     top: 160px;
     width: 100%;
     height: 14px;
   }
 
-  .circleOne{
+  .circleOne {
     height: 5px;
-    width:  5px;
+    width: 5px;
     background-color: #9b9b9b;
     border-radius: 100%;
     margin-left: 48%;
     margin-right: 1.3%;
   }
 
-  .circleTwo{
+  .circleTwo {
     height: 5px;
-    width:  5px;
+    width: 5px;
     background-color: #9b9b9b;
     border-radius: 100%;
     margin-left: 0;
     margin-right: 47%;
   }
 
-  #darkCicleOne{
+  #darkCicleOne {
     background-color: #4a4a4a;
   }
 
-  #darkCircleTwo{
+  #darkCircleTwo {
     background-color: #4a4a4a;
   }
 
@@ -441,13 +436,15 @@ app-dashboard {
   }
 
   .person-card {
-    max-width: 300px;
-    width: 80%;
+    max-width: 375px;
+    max-height: 174px;
+    width: 100%;
     height: 100%;
-    //max-height: 200px;
-    object-fit: contain;
-    margin: 0 12px;
-    background-color: blue;
+    object-fit: cover;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    padding: 12px;
 
     // Added the slant pattern!
     .top-pattern {
@@ -478,6 +475,15 @@ app-dashboard {
       background-color: var(--ion-color-light);
       z-index: -2;
     }
+    .person-card-header {
+      padding: 12px !important;
+      display: flex;
+      flex-direction: row;
+    }
+  }
+  .person-avatar {
+    width: 150px !important;
+    height: 150px !important;
   }
 
   .person-content {
@@ -490,20 +496,46 @@ app-dashboard {
     --background: transparent;
   }
 
+  .person-edit-profile {
+    width: 183px;
+    height: 26px;
+  }
+
   .person-content-left {
-    margin: 8px 12.5px 21px 0;
-    width: 40%;
-    height: 44px;
-    line-height: 100%;
+    // margin: 8px 12.5px 21px 0;
+    // width: 40%;
+    // height: 44px;
+    // line-height: 100%;
+    width: 100%;
+    padding-left: 12px;
+    display: flex;
+    flex-direction: column;
+    // justify-content: space-between;
   }
 
   .person-name {
     font-size: 14px;
+    width: 183px;
+    height: 23px;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+
+    color: #000000;
+  }
+  .person-content-container {
+    margin-left: 18px;
   }
 
   .person-title {
+    width: 183px;
+    height: 28px;
     font-size: 12px;
+    line-height: 14px;
     overflow: hidden;
+    margin: 8px 0px 16px 0px;
     color: var(--ion-color-darkgrey);
   }
 
@@ -603,7 +635,7 @@ app-dashboard {
       border: 1px solid var(--ion-color-lightgrey);
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
     }
-   }
+  }
 
   .relationship-name-container {
     height: 32px;
